# LinReg

./: .dockerignore  .gitignore  CONTRACT.md  LinReg.r  LinRegAPI.r  README.md  TODO.md  gghelper.r  random_script.R  utils.r
R/: install_packages.R  run_analysis.R
R/R/: diagnostics.R  eda_plots.R  io_json.R  model_fit.R  multivariate.R  nonlinear.R  nonparametric.R  posthoc.R  theme.R
R/tests/: testthat.R
R/tests/testthat/: test_helpers.R
docker/: Dockerfile  docker-compose.yml
examples/: counts_synthetic.csv  nested_tweedie_synthetic.csv  nonparametric_synthetic.csv  repeated_measures_synthetic.csv  zero_inflated_tweedie_synthetic.csv
legacy/: LinReg.r  LinRegAPI.r  gghelper.r
python/: README.md  pyproject.toml  requirements.txt
python/infer_auto/: __init__.py  cli.py  decision.py  eda.py  io_data.py  rbridge.py  report.py  reshape.py  spec.py
python/linreg_auto/: __init__.py  cli.py  report.py  spec.py
python/tests/: test_cli_smoke.py  test_decision.py  test_eda.py  test_report.py  test_reshape.py
